--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    volumes:
+      - .:/app
+    command: pnpm run dev
     depends_on:
       - postgres
 
@@ -16,7 +19,7 @@ services:
     environment:
       POSTGRES_DB: tracker-db
       POSTGRES_USER: dev
-      POSTGRES_PASSWORD: hackthehill
+      POSTGRES_PASSWORD: hackthehill # this password is only used on local development databases, NOT the production database (in case anyone felt alarmed)
     ports:
       - "5432:5432"
     volumes:
