--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pg-hstore": "^2.3.4",
     "react": "^18",
     "react-dom": "^18",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@types/node": "^20",
