Added middleware for body validation and schema validation for .env

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_ADDR=
 
+# JSON Web Token secret
+# You don't have to include this in your .env file, as the Dockerfile automatically generates a random secure value for JWT_SECRET
+JWT_SECRET=
