--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.6",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
@@ -19,6 +20,7 @@
     "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
