Removed random JWT token generation in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
-    command: >
-      sh -c "echo \"JWT_SECRET=$(openssl rand -hex 32)\" >> /app/.env &&
-             pnpm run dev"
+    command: pnpm run dev
     depends_on:
       - postgres
 
