--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       POSTGRES_PASSWORD: hackthehill # this password is only used on local development databases, NOT the production database (in case anyone felt alarmed)
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+    #volumes:
+    #  - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:
