--- a/package.json
+++ b/package.json
@@ -9,26 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2",
-    "next": "13.5.6",
-    "pg": "^8.11.5",
-    "pg-hstore": "^2.3.4",
     "react": "^18",
     "react-dom": "^18",
-    "sequelize": "^6.37.3",
-    "zod": "^3.22.5"
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.6",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
     "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
