--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "commitizen": "^4.3.0",
     "commitlint": "^19.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "husky": "^9.0.11",
+    "inquirer": "^9.2.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
