--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "husky": "^9.0.11",
     "inquirer": "^9.2.23",
     "postcss": "^8",
+    "semantic-release": "^24.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
