--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "tracker-app-2024",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:inspect": "pnpx @eslint/config-inspector@latest",
     "commit": "cz",
     "prepare": "husky"
   },
@@ -16,18 +19,22 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.21.1",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/cz-commitlint": "^19.2.0",
     "@commitlint/types": "^19.0.3",
+    "@eslint-react/eslint-plugin": "^1.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "commitizen": "^4.3.0",
     "commitlint": "^19.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8",
+    "eslint": "^9.4.0",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-format": "^0.1.1",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "husky": "^9.0.11",
     "inquirer": "^9.2.23",
     "postcss": "^8",
