--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "husky": "^9.0.11",
     "inquirer": "^9.2.23",
+    "lint-staged": "^15.2.7",
     "postcss": "^8",
     "semantic-release": "^24.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*": "eslint --cache --fix"
   }
 }
