--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint:fix": "eslint . --fix",
     "lint:inspect": "pnpx @eslint/config-inspector@latest",
     "commit": "cz",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_31890ad84e6decf"
   },
   "dependencies": {
     "next": "14.2.3",
@@ -20,14 +23,24 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.1",
+    "@chromatic-com/storybook": "^1.5.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/cz-commitlint": "^19.2.0",
     "@commitlint/types": "^19.0.3",
     "@eslint-react/eslint-plugin": "^1.5.15",
+    "@storybook/addon-essentials": "^8.1.9",
+    "@storybook/addon-interactions": "^8.1.9",
+    "@storybook/addon-links": "^8.1.9",
+    "@storybook/addon-onboarding": "^8.1.9",
+    "@storybook/blocks": "^8.1.9",
+    "@storybook/nextjs": "^8.1.9",
+    "@storybook/react": "^8.1.9",
+    "@storybook/test": "^8.1.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "chromatic": "^11.5.4",
     "commitizen": "^4.3.0",
     "commitlint": "^19.3.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -35,15 +48,22 @@
     "eslint-config-next": "14.2.3",
     "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
     "inquirer": "^9.2.23",
     "lint-staged": "^15.2.7",
     "postcss": "^8",
     "semantic-release": "^24.0.0",
+    "storybook": "^8.1.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "lint-staged": {
     "*": "eslint --cache --fix"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
