ci: Add Chromatic env variable

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,8 @@ jobs:
       # run: pnpx playwright test
 
       - name: Run Visual Tests 👀
+        env:
+          CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
         run: pnpm run chromatic
 
       - name: Run Semantic Release 🤖
