--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "test-storybook": "test-storybook",
     "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
@@ -37,6 +38,7 @@
     "@storybook/nextjs": "^8.1.9",
     "@storybook/react": "^8.1.9",
     "@storybook/test": "^8.1.9",
+    "@storybook/test-runner": "^0.18.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
