--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
+    "@types/mdx": "^2.0.13",
+    "fumadocs-core": "^12.1.0",
+    "fumadocs-mdx": "^8.2.32",
+    "fumadocs-ui": "^12.1.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
